<resources>
    <string name="app_name">Wish World</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="friendlist">friendslist</string>
    <string name="wishlist">wishlists</string>
    <string name="logout">logout</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="logo">logo</string>
    <string name="createaccount">create account</string>
    <string name="identifiant">identifiant</string>
    <string name="password">password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="photo">photoprofile</string>
    <string name="edit">edit</string>
    <string name="link">Link</string>
    <string name="category">Category</string>
    <string name="creategroup">Create Group</string>
    <string name="nickname">Nickname</string>
    <string name="createfriendship">Create Friendship</string>
    <string name="deletewishlist">Delete Wishlist</string>
    <string name="updatewishlist">Update Wishlist</string>
    <string name="username">Username</string>
    <string name="friendName">Name</string>
    <string name="save">Save</string>
    <string name="birthday">Birthday</string>
    <string name="searchfriend">Search a new friend</string>
    <string name="updatefrienship">Update Friendship</string>
    <string name="delte">Delete Profile</string>
    <string name="deletefriend">Delete Friendship</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="nbmemebres">Nombre de membres</string>
    <string name="updateproduct">Update Product</string>
    <string name="ranking">Ranking</string>
</resources>
