<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomNavHome_btn"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/bottomNavProfile_btn"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/bottomNavFriendlist_btn"
        android:icon="@drawable/ic_friendlist"
        android:title="@string/friendlist" />
    <item
        android:id="@+id/bottomNavProducts_btn"
        android:icon="@drawable/ic_wishlists"
        android:title="Products" />
   <item
        android:id="@+id/bottomNavGroup_btn"
        android:icon="@drawable/ic_group"
        />

</menu>
