<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".UpdateFriendship">

    <Button
        android:id="@+id/up_friend_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/up_friend_nickname"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="299dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/up_friend_delete"
        android:layout_width="47dp"
        android:layout_height="54dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/deletefriend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/up_friend_save"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>