<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".ProfileActivity">

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="411dp"
        android:layout_height="300dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Profile_ID_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="243dp"
            android:text="@string/identifiant"
            android:textColor="#FEFEFF"
            android:textSize="32dp"
             />

        <ImageButton
            android:id="@+id/edit_profil"
            android:layout_width="60dp"
            android:layout_height="69dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/ic_settings_black_24dp"
            android:contentDescription="@string/edit"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

    </RelativeLayout>



    <ImageView
        android:id="@+id/photoprofile"
        android:layout_width="132dp"
        android:layout_height="133dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_friendlist" />

    <TextView

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FDFCFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/Profile_Name_tv"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/Profile_Surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Surname"
        android:textColor="#FDFCFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/Profile_Surname_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/Profile_Name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="130dp"
        android:text="Date of birth"
        android:textColor="#FDFCFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Profile_DOB_tv" />

    <TextView
        android:id="@+id/Profile_DOB_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="187dp"
        android:text="01/23/4567"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="Description"
        android:textColor="#FDFCFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Profile_Description_tv" />

    <TextView
        android:id="@+id/Profile_Description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/rounded_text"
        android:text="Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>